force-app/main/default/objects/LeadRegionCountryMapping__c/LeadRegionCountryMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will contain latest mapping of country code and Region(verticals).</description>
    <label>Lead_Region_Country_Mapping</label>
</CustomObject>