force-app/main/default/objects/LeadRegionCountryMapping__c/fields/FinancialRegion__c.field-meta.xml
<CustomField>
    <fullName>FinancialRegion__c</fullName>
    <label>Financial Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>