force-app/main/default/objects/LeadRegionCountryMapping__c/fields/HospitalityRegion__c.field-meta.xml
<CustomField>
    <fullName>HospitalityRegion__c</fullName>
    <label>Hospitality Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>