force-app/main/default/objects/LeadRegionCountryMapping__c/fields/New_Region__c.field-meta.xml
<CustomField>
    <fullName>New_Region__c</fullName>
    <label>New Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>