force-app/main/default/objects/LeadRegionCountryMapping__c/fields/RetailRegion__c.field-meta.xml
<CustomField>
    <fullName>RetailRegion__c</fullName>
    <label>Retail Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>