force-app/main/default/objects/LeadRegionCountryMapping__c/fields/TelecomRegion__c.field-meta.xml
<CustomField>
    <fullName>TelecomRegion__c</fullName>
    <label>Telecom Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>